<resources>
    <string name="app_name">MADLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="welcome">Welcome</string>
    <string name="your_stats">Your all time statistics</string>
    <string name="v_s">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
</resources>